--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -5,7 +5,7 @@
 		<div class="container-login100" style=" background-image: linear-gradient(to right, #a2d1e7, #609fda);">
 			<div class="wrap-login100 p-l-55 p-r-55 p-t-44 p-b-54">
 
-					<form (ngSubmit)="receberDados()" class="login100-form validate-form">
+					<form (ngSubmit)="onSubmit()" class="login100-form validate-form">
 						<span class="login100-form-title p-b-45" style="text-transform: uppercase;">
 							<img src="/assets/img-icons/img/GAME MANIA2.png">
 						</span>
